# eqplus-apo

./: .editorconfig  .gitignore  TODO.md  config.txt  error.html  package.json  splash.html  vite.config.ts
src/: App.tsx  GlobalStyles.tsx  audio-constants.ts  defaults.ts  error.tsx  settings.ts  splash.tsx  styled.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: device.rs  errors.rs  filters.rs  main.rs  registry.rs
src-tauri/src/dev/: config.rs  device.rs
src-tauri/src/win32/: com.rs  config.rs  device.rs  mod.rs
src/assets/: fonts.css
src/components/: CanvasPlot.tsx  Dial.tsx  Dial_OLD.tsx  DrawerControls.tsx  FlexBox.tsx  GainSlider.tsx  Logo.tsx  Select.tsx  SideControlsToggle.tsx
src/types/: device.ts  eqstate.ts  errors.ts  filter.ts  settings.ts
src/utils/: fastCopy.ts  logBridge.ts  useEvent.ts
