[package]
name = "eqplus"
version = "0.0.1"
description = "A Tauri App"
authors = ["Tyler Snedigar"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = [
  "dialog-open",
  "dialog-message",
  "fs-read-file",
  "fs-exists",
  "fs-write-file",
  "fs-create-dir",
  "shell-open"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
log = "0.4.20"
env_logger = "0.11.5"
windows = { version = "0.48.0", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Apo",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_UI_Shell_PropertiesSystem"
] }
once_cell = "1.18.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
